--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-hw",
+  "name": "react-native-hw-4",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -28,7 +28,8 @@
     "react-native-maps": "1.3.2",
     "expo-location": "~15.1.1",
     "expo-camera": "~13.2.1",
-    "expo-media-library": "~15.2.3"
+    "expo-media-library": "~15.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
